apps/forgejo/base/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: forgejo
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: forgejo
      app.kubernetes.io/name: forgejo
  serviceName: forgejo
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: forgejo
        app.kubernetes.io/name: forgejo
    spec:
      containers:
        - name: forgejo
          image: forgejo
          livenessProbe:
            httpGet:
              path: /api/healthz
              port: http
            initialDelaySeconds: 60
            timeoutSeconds: 5
          ports:
            - name: http
              containerPort: 3000
            - name: ssh
              containerPort: 2222
          readinessProbe:
            httpGet:
              path: /api/healthz
              port: http
            initialDelaySeconds: 30
            timeoutSeconds: 5
          startupProbe:
            failureThreshold: 180
            httpGet:
              path: /api/healthz
              port: http
            timeoutSeconds: 5
          volumeMounts:
            - name: data
              mountPath: /var/lib/gitea
            - name: startup-config
              mountPath: /var/lib/gitea/custom/conf/app.ini
              readOnly: true
              subPath: app.ini
          resources:
            requests:
              cpu: 49m
              memory: 16Gi
      securityContext:
        fsGroup: 1000
      volumes:
        - name: startup-config
          secret:
            secretName: forgejo-config
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        resources:
          requests:
            storage: 256Gi
        storageClassName: longhorn-capacity
        volumeMode: Filesystem
        accessModes:
          - ReadWriteOncePod
