apps/forgejo/base/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: forgejo
spec:
  sessionAffinity: ClientIP
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/instance: forgejo
    app.kubernetes.io/name: forgejo
---
apiVersion: v1
kind: Service
metadata:
  name: git
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/instance: forgejo
    app.kubernetes.io/name: forgejo
  ports:
    - name: ssh
      port: 22
      targetPort: ssh
